--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
 Source: tilecache
-Section: web
+Section: sig/web
 Priority: extra
 Maintainer: Christopher Schmidt <crschmidt@metacarta.com>
 Build-Depends: debhelper (>= 5.0.0)
-Build-Depends-Indep: python (>= 2.1), python-support (>= 0.3), 
+Build-Depends-Indep: python (>= 2.3), python-support (>= 0.3), 
                      python-setuptools
-Standards-Version: 3.7.3
+Standards-Version: 3.8.1
 Homepage: http://tilecache.org/
 
 Package: tilecache
