--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Homepage: http://tilecache.org/
 
 Package: tilecache
 Architecture: all
-XS-Python-Version: >= 2.1
-Depends: ${python:Depends}, python-boto
+XS-Python-Version: >= 2.3
+Depends: ${python:Depends}, python-boto, python-cairo
 Recommends: python-imaging
 Suggests: python-mapscript (>= 4.10), python-mapnik, memcached, python-memcache, python-flup, python-paste, python-wsgiref, python-simplejson
 Description: a web map tile caching system
