document tilecache.cfg

--- a/tilecache/tilecache.cfg
+++ b/tilecache/tilecache.cfg
@@ -14,6 +14,7 @@
 #crossdomain_sites=openstreetmap.org,openaerialmap.org
 
 # [cache] section examples: (mandatory!)
+# see: docs/Caches.txt
 # 
 # Disk:
 # [cache] 
@@ -30,6 +31,7 @@
 # type=AWSS3
 # access_key=your_access_key
 # secret_access_key=your_secret_access_key
+# policy=[private|public-read|public-read-write|authenticated-read] default is private
 
 [cache]
 type=Disk
