--- a/debian/control
+++ b/debian/control
@@ -5,14 +5,14 @@ Maintainer: Christopher Schmidt <crschmidt@metacarta.com>
 Build-Depends: debhelper (>= 5.0.0)
 Build-Depends-Indep: python (>= 2.3), python-support (>= 0.3), 
                      python-setuptools
-Standards-Version: 3.8.2
+Standards-Version: 3.8.3
 Homepage: http://tilecache.org/
 
 Package: tilecache
 Architecture: all
 XS-Python-Version: >= 2.3
-Depends: ${python:Depends}, python-boto, python-cairo
-Recommends: python-imaging
+Depends: ${python:Depends}, python-boto
+Recommends: python-imaging, python-image-merge
 Suggests: python-mapscript (>= 4.10), python-mapnik, memcached, python-memcache, python-flup, python-paste, python-wsgiref, python-simplejson
 Description: a web map tile caching system
  TileCache is an implementation of a WMS-C compliant server made available by
