--- a/debian/control
+++ b/debian/control
@@ -3,14 +3,13 @@ Section: sig/web
 Priority: extra
 Maintainer: Christopher Schmidt <crschmidt@metacarta.com>
 Build-Depends: debhelper (>= 5.0.0)
-Build-Depends-Indep: python (>= 2.3), python-support (>= 0.3), 
-                     python-setuptools
+Build-Depends-Indep: python, python-support, python-setuptools
+XS-Python-Version: >= 2.3
 Standards-Version: 3.8.3
 Homepage: http://tilecache.org/
 
 Package: tilecache
 Architecture: all
-XS-Python-Version: >= 2.3
 Depends: ${python:Depends}, python-boto
 Recommends: python-imaging, python-image-merge
 Suggests: python-mapscript (>= 4.10), python-mapnik, memcached, python-memcache, python-flup, python-paste, python-wsgiref, python-simplejson
