comments for the new max_age param

--- a/tilecache/tilecache.cfg
+++ b/tilecache/tilecache.cfg
@@ -32,6 +32,7 @@
 # access_key=your_access_key
 # secret_access_key=your_secret_access_key
 # policy=[private|public-read|public-read-write|authenticated-read] default is private
+# max_age=22222222
 
 [cache]
 type=Disk
