--- a/debian/rules
+++ b/debian/rules
@@ -36,6 +36,9 @@ install: build
 	python ./setup.py install --debian --no-compile --root=$(PREFIX)
 
 	# eliminates script-not-executable warning from lintian
+	ls $(PREFIX)
+	ls $(PREFIX)/usr
+	ls $(PREFIX)/usr/bin/
 	rm $(PREFIX)/usr/bin/tilecache_install_config.py # only used for eggs
 	mv $(PREFIX)/usr/bin/tilecache.* $(PREFIX)/usr/lib/cgi-bin # .cgi, .fcgi
 	mv $(PREFIX)/usr/bin/tilecache_seed.py $(PREFIX)/usr/sbin/tilecache_seed
