--- a/debian/rules
+++ b/debian/rules
@@ -38,7 +38,8 @@ install: build
 	# eliminates script-not-executable warning from lintian
 	ls $(PREFIX)
 	ls $(PREFIX)/usr
-	ls $(PREFIX)/usr/bin/
+	ls $(PREFIX)/usr/sbin/
+        find $(PREFIX) -name tilecache_install_config.py
 	rm $(PREFIX)/usr/bin/tilecache_install_config.py # only used for eggs
 	mv $(PREFIX)/usr/bin/tilecache.* $(PREFIX)/usr/lib/cgi-bin # .cgi, .fcgi
 	mv $(PREFIX)/usr/bin/tilecache_seed.py $(PREFIX)/usr/sbin/tilecache_seed
