--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ build-stamp:
 	dh_testdir
 	# Add here commands to compile the package.
 	sed -e 's!tilecache\.cgi!/cgi-bin/tilecache.cgi!' ./index.html > ./cgi-example.html
-	python ./setup.py --prefix=/usr/ test 
+	python ./setup.py test 
 	touch build-stamp
 
 clean:
@@ -33,7 +33,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/tilecache.
-	python ./setup.py install --debian --no-compile --root=$(PREFIX)
+	python ./setup.py install --debian --no-compile --root=$(PREFIX) --prefix=/usr/
 
 	# eliminates script-not-executable warning from lintian
 	rm $(PREFIX)/usr/bin/tilecache_install_config.py # only used for eggs
