--- a/debian/rules
+++ b/debian/rules
@@ -55,6 +55,7 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_pysupport
+	find $(PREFIX) -name Service.py
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py
 	dh_installdeb
