--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,7 @@
 #export DH_VERBOSE=1
 
 PREFIX := debian/tilecache
+DEB_PYTHON_SYSTEM=pysupport
 PYSUPPORT := /usr/share/python-support/tilecache
 
 build: build-stamp
@@ -56,8 +57,8 @@ binary-indep: build install
 	dh_fixperms
 	dh_pysupport
 	find $(PREFIX) -name Service.py
-	chmod +x $(PREFIX)/usr/share/pyshared/TileCache/Service.py
-	chmod +x $(PREFIX)/usr/share/pyshared/TileCache/Client.py
+	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py
+	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py
 	dh_installdeb
 	dh_gencontrol
 	dh_md5sums
