--- a/debian/rules
+++ b/debian/rules
@@ -6,8 +6,8 @@
 #export DH_VERBOSE=1
 
 PREFIX := debian/tilecache
-DEB_PYTHON_SYSTEM := pysupport
 PYSUPPORT := /usr/share/python-support/tilecache
+PYSHARED := /usr/share/pyshared
 
 build: build-stamp
 
@@ -56,7 +56,7 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_pysupport
-	find $(PREFIX) -name Service.py
+	if [ ! -d $(PREFIX)$(PYSUPPORT) ] then PYSUPPORT := $(PYSHARED)
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py
 	dh_installdeb
