--- a/debian/rules
+++ b/debian/rules
@@ -56,7 +56,7 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_pysupport
-	if [ ! -d $(PREFIX)$(PYSUPPORT) ] then; PYSUPPORT=$(PYSHARED); fi;
+	if [ ! -d $(PREFIX)$(PYSUPPORT) ]; then; PYSUPPORT=$(PYSHARED); fi;
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py
 	chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py
 	dh_installdeb
