--- a/debian/rules
+++ b/debian/rules
@@ -56,9 +56,8 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_pysupport
-	if [ ! -d $(PREFIX)$(PYSUPPORT) ]; then PYMODULE=$(PYSHARED); else PYMODULE=$(PYSUPPORT); fi
-	chmod +x $(PREFIX)$PYMODULE/TileCache/Service.py
-	chmod +x $(PREFIX)$PYMODULE/TileCache/Client.py
+	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Service.py; fi
+	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Client.py; fi
 	dh_installdeb
 	dh_gencontrol
 	dh_md5sums
