separate sqeeze an lenny

--- a/debian/rules
+++ b/debian/rules
@@ -56,8 +56,10 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_pysupport
-	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Service.py; fi
-	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Client.py; fi
+#	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Service.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Service.py; fi
+#	if [ -d $(PREFIX)$(PYSUPPORT) ]; then chmod +x $(PREFIX)$(PYSUPPORT)/TileCache/Client.py; else chmod +x $(PREFIX)$(PYSHARED)/TileCache/Client.py; fi
+	chmod +x $(PREFIX)$(PYSHARED)/TileCache/Service.py;
+	chmod +x $(PREFIX)$(PYSHARED)/TileCache/Client.py;
 	dh_installdeb
 	dh_gencontrol
 	dh_md5sums
